               * DISCNUMBER instead of the below mentioned DISC
               * TRACKNUMBER instead of the below mentioned TRACK
               * ENCODER instead of the below mentioned ENCODEDBY
               * URL_DISCOGS_RELEASE_SITE, the url to the discogs release
               * DISCID instead of the formerly used freedb_id

* improvement: provide script for tag update

* improvement: refactored replay gain

* improvement: version bump uses bumpversion

* improvement: remove unnecessary enumeration class

Version 2.2.0

* improvement: be able to store and re-use tokens for the access to discogs (these are stored
               in the file .token in the current directory

* improvement: use latest version of the ext/mediafile (cloned from https://raw.githubusercontent.com/beetbox/mediafile/master/mediafile.py)

* improvement: cleanup storeage of Metadata of flacs, the following fields are used now:
               TRACK (TRACKNUMBER is not used anymore), TRACKTOTAL (TRACKC and TOTALTRACKS are not used anymore),
               DISC (DISCNUMBER is not used anymore), DISCTOTAL (DISCC and TOTALDISCS are not used anymore),
               COMMENT (DESCRIPTION is not used anymore), ALBUMARTIST (ALBUM ARTIST is not used anymore),
               LABEL (PUBLISHER is not used anymore), ENCODEDBY (ENCODER is not used anymore),
               DISCOGSID (was DiscogsId), DISCID (for freedb) added, FOLDER (for grouping purposes) added

Version 2.1.1

* improvement: This release contains some fixes for #14 and #16. Furthermore there is already a first draft for #7 included.

Version 2.0.1

* improvement: add new script to add folder tag to all selected files, so that the
               sorting of those files will be easier in BubbleUpnp, this new tag
               has to be added to minimserver to be sortable

Version 2.0.0

* improvement: remove group-config tag, as this could be easily added in the
               dir-format