@@ -11,17 +11,17 @@ logging.basicConfig(level=10)
 logger = logging.getLogger(__name__)
 
 def find_files(basepath, pattern):
-	result = []
+    result = []
 
-	logging.debug('migration starts in %s for files %s' % (basepath, pattern))
+    logging.debug('migration starts in %s for files %s' % (basepath, pattern))
 
-	base = os.path.expanduser(basepath)
+    base = os.path.expanduser(basepath)
 
-	for root, dirs, files in os.walk(base):
-			for filename in fnmatch.filter(files, pattern):
-					result.append(os.path.join(root, filename))
+    for root, dirs, files in os.walk(base):
+            for filename in fnmatch.filter(files, pattern):
+                    result.append(os.path.join(root, filename))
 
-	return result
+    return result
 
 p = OptionParser()
 p.add_option("-b", "--basedir", action="store", dest="basedir",
@@ -39,44 +39,43 @@ logging.debug('migrate %d files' % len(files))
 
 filenames = []
 for filename in files:
+    logging.debug("working on %s" % filename)
+
     audio = FLAC(filename)
 
-	cmd = []
+    cmd = []
 
-	cmd.append("metaflac")
-	cmd.append(" --preserve-modtime")
-	cmd.append(" --remove-tag=TRACK")
-	cmd.append(" --remove-tag=TRACKC")
-	cmd.append(" --remove-tag=TOTALTRACKS")
-	cmd.append(" --remove-tag=DISC")
-	cmd.append(" --remove-tag=DISCC")
-	cmd.append(" --remove-tag=TOTALDISCS")
-	cmd.append(" --remove-tag=ALBUM ARTIST")
-	cmd.append(" --remove-tag=PUBLISHER")
-	cmd.append(" --remove-tag=ENCODEDBY")
-	cmd.append(" --remove-tag=DESCRIPTION")
+    cmd.append("metaflac")
+    cmd.append("--preserve-modtime")
+    cmd.append("--remove-tag=TRACK")
+    cmd.append("--remove-tag=TRACKC")
+    cmd.append("--remove-tag=TOTALTRACKS")
+    cmd.append("--remove-tag=DISC")
+    cmd.append("--remove-tag=DISCC")
+    cmd.append("--remove-tag=TOTALDISCS")
+    cmd.append("--remove-tag=ALBUM ARTIST")
+    cmd.append("--remove-tag=PUBLISHER")
+    cmd.append("--remove-tag=ENCODEDBY")
+    cmd.append("--remove-tag=DESCRIPTION")
+    cmd.append("--remove-tag=URL")
+    cmd.append("--remove-tag=URLTAG")
 
-	discogsId = None
-	if 'discogs_id' in audio:
-		discogsId = audio['discogs_id']
+    discogsId = None
+    if 'discogs_id' in audio:
+        discogsId = audio['discogs_id']
 
-		cmd.append(" --remove-tag=discogs_id")
-		cmd.append(" --set-tag=DISCOGSID=" + ''.join(str(e) for e in discogsId))
-		cmd.append(" --set-tag=URL_DISCOGS_RELEASE_SITE=" + ''.join(str(e) for e in discogsId))
+        cmd.append("--remove-tag=discogs_id")
+        cmd.append("--set-tag=DISCOGSID=" + ''.join(str(e) for e in discogsId))
+        cmd.append("--set-tag=URL_DISCOGS_RELEASE_SITE=https://www.discogs.com/release/" + ''.join(str(e) for e in discogsId))
 
-	freedbId = None
-	if 'freedb_id' in audio:
-		freedbId = audio['freedb_id']
+    cmd.append(filename)
 
-		cmd.append(" --remove-tag=freedb_id")
-		cmd.append(" --set-tag=DISCID=" + ''.join(str(e) for e in freedbId))
+    logging.debug("cmd %s" % cmd)
 
-	cmd.append(filename)
+    p = subprocess.Popen(cmd)
+    return_code = p.wait()
+    logging.debug("return %s" % str(return_code))
 
-	p = subprocess.Popen(cmd)
-	p.wait()
-	(output, err) = p.communicate()
-
-	filenames.append(filename)
+    filenames.append(filename)
 
 logging.debug('migrated %d files' % (len(filenames)))
